20070204 ChangeLog: fix some attributions (Fred).
20070204 libspectrum.h.in,rzx.c,doc/libspectrum.txt: make
	 libspectrum_rzx_playback_frame able to return a snap (necessary
	 for supporting RZXs made with SPIN's "RZX Pause" feature)
	 (libspectrum_0_3_0-branch).
20070217 tzx_read.c: do allocate memory if we have no data but some padding
	 in tzx_read_data() (libspectrum_0_3_0-branch).
20070303 TAG: libspectrum_0_3_0-pre2 (libspectrum_0_3_0-branch)
20070310 internals.h: add prototypes for libspectrum_z80em_read and
         libspectrum_csw_read (libspectrum_0_3_0-branch) (Fred).
20070324 z80.c: initialise snap->beta_paged (fixes Action Farce II RZX
	 playback; see bug #1654105) (thanks, Jon Needle)
	 (libspectrum_0_3_0-branch).
20070409 z80.c: remove warning (libspectrum_0_3_0-branch).
20070411 ChangeLog,Makefile.am,README,configure.in,doc/libspectrum.3: update
	 for 0.3.0 release (libspectrum_0_3_0-branch).
20070411 TAG: libspectrum_0_3_0 (libspectrum_0_3_0-branch)
20070425 tap.c,tzx_read.c: call libspectrum_tape_clear() on error rather than
	 libspectrum_tape_free() to avoid double free bug (fixes bugs #1479451
	 and #1706994; thanks, crabfists) (libspectrum_0_3_0-branch).
20070509 libspectrum.in: add WIN32_DLL to Generalised Data Block functions
	 (part of patch 1711412) (libspectrum_0_3_0-branch) (Stuart Brady).
20070509 Makefile.am,configure.in,hacking/{.cvsignore,Makefile.am}: distribute
	 the hacking/ subdir (thanks, Stuart Brady) (libspectrum_0_3_0-branch).
20070509 acinclude.m4: fix underquoted macro (thanks, Stuart Brady)
	 (libspectrum_0_3_0-branch).
20070510 ChangeLog,Makefile.am,README,configure.in,doc/{libspectrum.3,
	 libspectrum.txt}: updates for 0.3.0.1 release
	 (libspectrum_0_3_0-branch).
20070511 TAG: libspectrum_0_3_0_1 (libspectrum_0_3_0-branch)
20070512 doc/cvs-tags: document merge back to trunk (libspectrum_0_3_0-branch)
20070512 Merge changes from libspectrum_0_3_0-branch to HEAD.
20070512 TAG: libspectrum_0_3_0-merge-1