@@ -1,4 +1,4 @@
-/* make-sed.c: Generate a sed script to create the libspectrum_* typedefs
+/* make-perl.c: Generate a perl script to create the libspectrum_* typedefs
    Copyright (c) 2002-2003 Philip Kendall, Darren Salt
 
    $Id$
